[project]
name = "rpi-aws-iot"
version = "0.1.0"
description = "Simple IoT data pipeline using Raspberry Pi and AWS IoT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aws-lambda-powertools>=3.7.0",
    "boto3>=1.37.1",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.115.9",
    "mypy-boto3-dynamodb>=1.37.0",
    "paho-mqtt>=2.1.0",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.0",
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.39",
]

[tool.ruff]
line-length = 120  # Match Black's default line length
target-version = "py311"  # Change based on your Python version

[tool.ruff.format]
quote-style = "double"  # Options: "single", "double"
indent-style = "space"  # Options: "space", "tab"
line-ending = "lf"  # Options: "lf", "crlf", "native"
docstring-code-format = true  # Format code inside docstrings

[tool.ruff.lint]
select = ["I"]  # Enables Ruff's import sorting (equivalent to isort)
fixable = ["I"]  # Allows automatic fixing of import order

[tool.pytest.ini_options]
testpaths = ["raspberry_pi/tests"]
pythonpath = ["raspberry_pi/src"]
addopts = "-v"
